--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.3.0"
+    "mysql2": "^3.3.0",
+    "pg": "^8.11.5"
   }
 }
